@@ -5,7 +5,6 @@ import org.springframework.stereotype.Repository;
 
 import java.util.Optional; 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository 
 public class JpaScholarshipRepository implements ScholarshipRepository {
@@ -33,7 +32,7 @@ public class JpaScholarshipRepository implements ScholarshipRepository {
         return repository.findAll()
                 .stream()
                 .map(ScholarshipMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
